--- a/src/main/resources/templates/school/education/list.html
+++ b/src/main/resources/templates/school/education/list.html
@@ -36,17 +36,19 @@
 		          <a class="nav-link" href="#">최신순</a>
 		        </li>
 		      </ul>
-		      <form class="d-flex" role="search">
-		          <select class="form-select" aria-label="Default select example">
-		            <option selected>- 전체 -</option>
-		            <option value="1">제목</option>
-		            <option value="2">내용</option>
-		            <option value="3">교육대상</option>
-		          </select>
-		          &nbsp;&nbsp;
-		          <input class="form-control me-2" type="search" placeholder="검색해주세요" aria-label="검색해주세요">
-		          <button class="btn custom-btn" type="submit">search</button>
-		        </form>
+		      
+		    	<!--검색기능-->
+		    	 <div class="d-flex" >
+				<select class="form-select" aria-label="Default select example" name="category" id="category">
+				  <option selected>- 선택 -</option>
+				  <option value="eduName">제목</option>
+				  <option value="eduContent">내용</option>
+				  <option value="eduApp">교육대상</option>
+				</select>
+				&nbsp;&nbsp;
+				<input class="form-control me-2" type="search" placeholder="검색해주세요" aria-label="검색해주세요" name="search" id="search">
+				<input class="btn custom-btn" type="submit" id="btnSearch" value="검색">
+		    	 </div>
 		    </div>
 		  </div>
 		</nav>
@@ -74,13 +76,17 @@
 		
 		<div class="grid text-center" style="--bs-columns: 4;">
 			<nav aria-label="Page navigation example">
-			  &nbsp;<ul class="pagination justify-content-center"> &nbsp;
+			 &nbsp;  <ul class="pagination justify-content-center"> &nbsp;
 			    <li class="page-item">
 			      <a class="page-link" href="#" aria-label="Previous">
 			        <span aria-hidden="true">&laquo;</span>
 			      </a>
 			    </li>
-			    <li:block class="page-item"  th:each="i:${#numbers.sequence(1,totalPage)}"><a class="page-link" th:href="@{'/school/education/list/'+${i}}" th:text="${i}"></a></li:block>
+			    <li:block class="page-item" th:each="i:${#numbers.sequence(1,totalPage)}">
+					<if="search != null">
+					<a class="page-link" th:href="@{'/school/education/list/'+${category}+'/'+${search}+'/'+${i}}" th:text="${i}"></a>
+					</if>
+				</li:block>
 			    <li class="page-item">
 			      <a class="page-link" href="#" aria-label="Next">
 			        <span aria-hidden="true">&raquo;</span>
