--- a/src/main/resources/templates/userinfo/login.html
+++ b/src/main/resources/templates/userinfo/login.html
@@ -23,7 +23,7 @@
 </head>
 
 <body>
-		
+
 	<div th:include="./main/header.html"></div>
 	<div class="container">
 
@@ -36,7 +36,7 @@
 			<div class="mb-3 justify-content-center row">
 				<img src="https://i.postimg.cc/gc760pLT/kakao.png" alt="kakao"
 					class="sns-logo img-responsive center-block col-sm-3"
-					onclick="window.location.href='https://kauth.kakao.com/oauth/authorize?client_id=29ba16db25cdb9eb61b39a437825310b&redirect_uri=http://localhost:8080/kakao/callback&response_type=code'">
+					onclick="window.location.href='http://localhost:8080/oauth2/authorization/kakao'">
 				<img src="https://i.postimg.cc/NfpG07nf/naver.png" alt="naver"
 					class="sns-logo img-responsive center-block col-sm-3">
 			</div>
@@ -46,30 +46,29 @@
 
 			<div class="row">
 				<!--로그인 form-->
-				<form class="needs-validation" method="post" action="/userinfo/login">
-					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}">
+				<form class="needs-validation" name="formLogin" method="post" action="/userinfo/login">
+					<input type="hidden" th:name="${_csrf.parameterName}" th:value="${_csrf.token}" id="csrf">
 					<div class="mb-3 row justify-content-center">
 						<label for="inputId" class="col-sm-3 col-form-label">아이디</label>
 						<div class="col-sm-5">
-							<input type="text" class="form-control input" id="inputId" name="username"
-								onkeydown="onlyAlphabet(this)" required>
-							<div class="invalid-tooltip">아이디를 입력해주세요.</div>
+							<input type="text" class="form-control input" id="username" name="username" required>
 						</div>
 					</div>
 					<div class="mb-3 row justify-content-center">
 						<label for="inputPwd" class="col-sm-3 col-form-label">비밀번호</label>
 						<div class="col-sm-5">
-							<input type="password" class="form-control input" id="inputPwd" name="password" required>
-							<div class="invalid-tooltip">비밀번호를 입력해주세요.</div>
+							<input type="password" class="form-control input" id="password" name="password" required>
 						</div>
 					</div>
 					<div class="mb-3 justify-content-center">
-						<button class="btn submit-btn custom-btn" type="submit" id="btn-login">로그인</button>
+						<button class="btn submit-btn custom-btn" type="button" id="btn-login"
+							onclick="submitForm()">로그인</button>
 					</div>
 				</form>
 
 
 			</div>
+			<!-- 아이디, 비밀번호 찾기 및 회원가입-->
 			<div>
 				<a class="text-sucess link" href="https://nid.naver.com/user2/help/idInquiry?lang=ko_KR"
 					data-bs-toggle="modal" data-bs-target="#modal-findId">아이디</a>&nbsp;/&nbsp;
@@ -95,8 +94,7 @@
 									<div class="mb-3">
 										<div class="form-check form-check-inline">
 											<input type="radio" class="form-check-input" name="type" value="email"
-												checked>
-											이메일
+												checked>이메일
 										</div>
 										<div class="form-check form-check-inline">
 											<input type="radio" class="form-check-input" name="type" value="phone"> 전화번호
@@ -131,31 +129,102 @@
 								</div>
 							</form>
 							<div class="modal-footer justify-content-center" style="border: none;">
-								<h3 id="result" class="text-alien-center"></h3>
+								<h3 id="resultFindId" class="text-alien-center"> </h3>
 							</div>
 						</div>
 					</div>
 				</div>
+				<!-- 아이디찾기 Modal end-->
+
+				<!-- 비밀번호 찾기 Modal -->
+				<div class="modal fade" id="modal-findPwd" data-bs-backdrop="static" data-bs-keyboard="false"
+					tabindex="-1" aria-labelledby="modal-findPwd" aria-hidden="true">
+					<div class="modal-dialog modal-dialog-centered" style="max-width: 450px;">
+						<div class="modal-content">
+							<div class="modal-header" style="border: none;">
+								<button type="button" class="btn-close" onclick="closeModal()" data-bs-dismiss="modal"
+									aria-label="Close"></button>
+							</div>
+							<form id="findPwdForm">
+								<div class="modal-body justify-content-center">
+									<h2>비밀번호 찾기</h2>
+									<p class="mb-3">전화번호 혹은 이메일을 입력해주세요.</p>
+
+									<div class="mb-3">
+										<div class="form-check form-check-inline">
+											<input type="radio" class="form-check-input" name="type2" value="email"
+												checked>이메일
+										</div>
+										<div class="form-check form-check-inline">
+											<input type="radio" class="form-check-input" name="type2" value="phone">
+											전화번호
+										</div>
+									</div>
+									<div id="div-email2" class="mb-3" style="display: inline-flex;">
+										<input type="text" class="form-control input" id="inputEmail2" name="email"
+											style="max-width: 150px;">
+										<span style="padding: 5px;">&nbsp;@&nbsp;</span>
+										<select class="form-select input" id="inputEmailUrl2" style="max-width: 150px;">
+											<option value="none" selected>이메일 선택</option>
+											<option value="naver.com">naver.com</option>
+											<option value="daum.net">daum.net</option>
+											<option value="kakao.com">kakao.com</option>
+											<option value="gmail.com">gmail.com</option>
+										</select>
+									</div>
+
+									<div id="div-phone2" class="mb-3" style="display: none;">
+										<input type="text" class="form-control input" id="inputPhoneId21"
+											style="max-width: 80px;">
+										<span style="padding-top: 5px;">&nbsp;&nbsp;-&nbsp;&nbsp;</span>
+										<input type="text" class="form-control input" id="inputPhoneId22"
+											style="max-width: 90px;">
+										<span style="padding-top: 5px;">&nbsp;&nbsp;-&nbsp;&nbsp;</span>
+										<input type="text" class="form-control input" id="inputPhoneId23"
+											style="max-width: 90px;">
+									</div>
+									<br>
+									<button type="button" class="btn custom-btn" id="btn-searchId"
+										onclick="sendCode()">인증번호 받기</button>
+								</div>
+							</form>
+								<div id="div-code" style="display: none;">
+									<input type="text" class = "input" name="inputCode" id="inputCode">
+									<button type="button" class="btn custom-btn" id = "btn-code"
+									onclick="checkCode()">확인</button>
+								</div>
+							<div class="modal-footer justify-content-center" style="border: none;">
+								<div id="divSetPwd" style="display: none;">
+									<input type="text" class = "input" id="inputNewPwd">
+									<input type="text" class = "input"  id="inputNewPwdCheck">
+									<button type="button" class="btn custom-btn" id = "btn-code"
+									onclick="setPwd()">재설정</button>
+								</div>
+							</div>
+						</div>
+					</div>
+					<!-- 비밀번호 찾기 Modal end-->
+				</div>
+				<!-- 아이디, 비밀번호 찾기 및 회원가입 -->
+
+
+
 			</div>
 
 
 
+
+
 		</div>
+		<div th:include="./main/footer.html"></div>
 
-
-
-
-
-	</div>
-	<div th:include="./main/footer.html"></div>
-
-	<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
-		</script>
-	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
-	<script src="/js/userinfo/login.js"></script>
+		<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
+			integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous">
+			</script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+		<script src="/js/userinfo/login.js"></script>
 
 </body>
 
