--- a/src/main/resources/templates/admin/Side/Sidebar.html
+++ b/src/main/resources/templates/admin/Side/Sidebar.html
@@ -24,7 +24,7 @@
 
   <div class="container-sidebar">
     <div class="side-menu">
-      <a class="side-menu-item" href="/adminD">
+      <a class="side-menu-item" href="/adminDashBoard">
         <img src="/images/admin/Sidemenu-DashBoard.png" alt="DashBoard">
         대 시 보 드
       </a>
@@ -38,14 +38,15 @@
 
         <div class="collapse" id="User">
           <ul class="list-group">
-            <a class="list-group-item-sub-menu">
-              <img src="/images/admin/Sidemenu-Dot.png" alt="dot">
-              운영자 관리
-            </a>
 
-            <a class="list-group-item-sub-menu">
+            <a class="list-group-item-sub-menu" href="/adminUserList">
               <img src="/images/admin/Sidemenu-Dot.png" alt="dot">
               회원 관리
+            </a>
+
+            <a class="list-group-item-sub-menu"  href="adminAdminList">
+              <img src="/images/admin/Sidemenu-Dot.png" alt="dot">
+              운영자 관리
             </a>
           </ul>
         </div>
@@ -95,7 +96,7 @@
 
           <a class="list-group-item-sub-menu">
             <img src="/images/admin/Sidemenu-Dot.png" alt="dot">
-            문의 게시판 관리
+            문의 게시판
           </a>
           </ul>
         </div>
