[Wearth1.0]8월 7일 각 html 연결구조 2차

--- a/src/main/resources/templates/admin/Side/Sidebar.html
+++ b/src/main/resources/templates/admin/Side/Sidebar.html
@@ -83,12 +83,12 @@
 
         <div class="collapse" id="School">
           <ul class="list-group">
-            <a class="list-group-item-sub-menu">
+            <a class="list-group-item-sub-menu" href="adminSchoolLecture">
               <img src="/images/admin/Sidemenu-Dot.png" alt="dot">
               강연 관리
             </a>
 
-            <a class="list-group-item-sub-menu">
+            <a class="list-group-item-sub-menu" href="adminSchoolEducation">
               <img src="/images/admin/Sidemenu-Dot.png" alt="dot">
               교육 관리
             </a>
