--- a/src/main/resources/templates/mypage/shopping/detail.html
+++ b/src/main/resources/templates/mypage/shopping/detail.html
@@ -25,9 +25,8 @@
 	<div class="container con">
 		<div>
           <span class="mb-6 sm-3 title">상세 주문내역&nbsp;&nbsp;</span>
-		  <span style="font-size: 20;">주문번호 : w001&nbsp;</span>
-      	  <span style="font-size: 20;">•&nbsp;&nbsp;주문일자 : 2023/07/22 14:23</span>
-          
+		  <span style="font-size: 20;" th:text="'주문번호 : '+${order.ordersNo}+' '"></span>
+      	  <span style="font-size: 20;" th:text="' • 주문일자 : '+${#dates.format(order.ordersDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
           <button class="btn custom-reverse-btn t-btn">문의</button>
           <button class="btn custom-reverse-btn t-btn">주문취소</button>
           
@@ -40,28 +39,10 @@
             <th>결제금액</th>
             <th><i class="fa-solid fa-bars" style="color: #5c5c5c;"></i></th>
           </tr>
-          <tr>
-            <td><img class="img" src="https://simplyo19.godohosting.com/images/thumbnail/dental/toothbrush_12ea_detail.jpg"></td>
-            <td>대나무 칫솔 2EA</td>
+          <tr th:each="d:${ordersdetail_list}">
+            <td><img class="img" th:src="@{/images/shop/}+${d.mainfname}"></td>
+            <td th:text="${d.goodsname}">대나무 칫솔 2EA</td>
             <td><b style="text-decoration: line-through;">3,500원</b><br>2,700원</td>
-            <td><button class="btn custom-btn">후기쓰기</button></td>
-          </tr>
-          <tr>
-            <td><img class="img" src="https://shinemakers.co.kr/web/product/tiny/202201/b1198a9f4b6658f19b6c897d3bf4ca5a.jpg"></td>
-            <td>1종 안심세척 설거지바 170g</td>
-            <td>4,900원</td>
-            <td><button class="btn custom-btn">후기쓰기</button></td>
-          </tr>
-          <tr>
-            <td><img class="img" src="https://shinemakers.co.kr/web/product/extra/big/202204/5e7aacde70d699a2af17ff7883bfcf7a.jpg"></td>
-            <td>제로웨이스트 천연 수세미</td>
-            <td>3,000원</td>
-            <td><button class="btn custom-btn">후기쓰기</button></td>
-          </tr>
-          <tr>
-            <td><img class="img" src="https://shinemakers.co.kr/web/product/extra/big/202106/1b8ed1b961bc625459e51093721abaf7.jpg"></td>
-            <td>스테인리스 수세미 홀더</td>
-            <td><b style="text-decoration: line-through;">5,000원</b><br> 3,000원</td>
             <td><button class="btn custom-btn">후기쓰기</button></td>
           </tr>
       </table>
