--- a/src/main/resources/templates/admin/Side/Sidebar.html
+++ b/src/main/resources/templates/admin/Side/Sidebar.html
@@ -39,7 +39,7 @@
         <div class="collapse" id="User">
           <ul class="list-group">
 
-            <a class="list-group-item-sub-menu" href="/adminUserList">
+            <a class="list-group-item-sub-menu" href="/adminUserList/1">
               <img src="/images/admin/Sidemenu-Dot.png" alt="dot">
               회원 관리
             </a>
