--- a/src/main/resources/templates/main/header.html
+++ b/src/main/resources/templates/main/header.html
@@ -58,14 +58,14 @@
 					<ul class="nav navbar-nav ml-auto" data-in="fadeInDown" data-out="fadeOutUp">
 						<li class="nav-item"><a class="nav-link" href="/">소개</a></li>
 						<li class="account">
-							<a href="/act/actBoardMain">
+							<a href="/board/list">
 								실천하기
 								<i class="fa fa-angle-down"></i>
 							</a>
 							<ul class="account_selection">
-								<li><a href="/act/actBoardMain"><i class="fa fa-sign-in" aria-hidden="true"></i>실천하기</a>
+								<li><a href="/board/list"><i class="fa fa-sign-in" aria-hidden="true"></i>실천하기</a>
 								</li>
-								<li><a href="/act/voluneteerMain"><i class="fa fa-sign-in" aria-hidden="true"></i>봉사</a>
+								<li><a href="/volunteer/list"><i class="fa fa-sign-in" aria-hidden="true"></i>봉사</a>
 								</li>
 
 							</ul>
