[Wearth1.0] 8월 9일 회원테이블 삭제, 선택삭제기능 완료 [우종호]

--- a/src/main/resources/templates/admin/Container/User/ContainerUserList.html
+++ b/src/main/resources/templates/admin/Container/User/ContainerUserList.html
@@ -20,153 +20,183 @@
 <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.3.0/js/bootstrap.min.js"></script>
 
-    <script src="/js/admin/User/ContainerUserList.js"></script>
-    <div class="container-userlist">
-        <div class="div-userlist-title">
-            회원 목록
-        </div>
-
-        <div class="div-userlist-searching">
-
-            <div class="div-userlist-searching-title">검 색</div>
-
-            <!-- 검색 영역-->
-            <div class="div-userlist-searching-container">
-
-                <!-- Text 영역-->
-                <div class="input-group">
-                    <div class="input-group flex-nowrap">
-                        <span class="input-group-text" id="1">이 름</span>
-                        <input type="text" class="form-control" placeholder="이름검색" aria-label="Username"
-                               aria-describedby="addon-wrapping">
-                    </div>
-                    <div class="input-group flex-nowrap">
-                        <span class="input-group-text" id="2">아 이 디</span>
-                        <input type="text" class="form-control" placeholder="아이디검색" aria-label="Username"
-                               aria-describedby="addon-wrapping">
-                    </div>
-                </div>
-
-                <div class="input-group">
-                    <div class="input-group flex-nowrap">
-                        <span class="input-group-text" id="3">나 이</span>
-                        <input type="text" class="form-control" placeholder="나이검색" aria-label="Username"
-                               aria-describedby="addon-wrapping">
-                    </div>
-                    <div class="input-group flex-nowrap">
-                        <span class="input-group-text" id="4">핸드폰 번호</span>
-                        <input type="text" class="form-control" placeholder="xxx-xxxx-xxxx" aria-label="Username"
-                               aria-describedby="addon-wrapping">
-                    </div>
-                </div>
-
-                <!-- DropDown 영역-->
-                <div class="dropdown-group">
-                    <div class="dropdown">
-                        <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
-                                aria-expanded="false">
-                            거주지
-                        </button>
-                        <ul class="dropdown-menu">
-                            <li><button class="dropdown-item" type="button">서울</button></li>
-                            <li><button class="dropdown-item" type="button">경기</button></li>
-                            <li><button class="dropdown-item" type="button">강원</button></li>
-                        </ul>
-                    </div>
-                </div>
-
-
-                <button>
-                    검색
-                </button>
+<script src="/js/admin/User/ContainerUserList.js"></script>
+        <div class="container-userlist">
+            <div class="div-userlist-title">
+                회원 목록
             </div>
 
-        </div>
+            <div class="div-userlist-searching">
 
-        <div class="table-userlist">
+                <div class="div-userlist-searching-title">검 색</div>
 
-            <div class=table-userlist-title>
-                <div>회원관리</div>
-                총 인원수: <span th:text="${totalUser} + '명'"></span>
-                <div></div>
+                <!-- 검색 영역-->
+                <div class="div-userlist-searching-container">
+
+                    <!-- Text 영역-->
+                    <div class="input-group">
+                        <div class="input-group flex-nowrap">
+                            <span class="input-group-text" id="1">이 름</span>
+                            <input type="text" class="form-control" placeholder="이름검색" aria-label="Username"
+                                   aria-describedby="addon-wrapping">
+                        </div>
+                        <div class="input-group flex-nowrap">
+                            <span class="input-group-text" id="2">아 이 디</span>
+                            <input type="text" class="form-control" placeholder="아이디검색" aria-label="Username"
+                                   aria-describedby="addon-wrapping">
+                        </div>
+                    </div>
+
+                    <div class="input-group">
+                        <div class="input-group flex-nowrap">
+                            <span class="input-group-text" id="3">나 이</span>
+                            <input type="text" class="form-control" placeholder="나이검색" aria-label="Username"
+                                   aria-describedby="addon-wrapping">
+                        </div>
+                        <div class="input-group flex-nowrap">
+                            <span class="input-group-text" id="4">핸드폰 번호</span>
+                            <input type="text" class="form-control" placeholder="xxx-xxxx-xxxx" aria-label="Username"
+                                   aria-describedby="addon-wrapping">
+                        </div>
+                    </div>
+
+                    <!-- DropDown 영역-->
+                    <div class="dropdown-group">
+                        <div class="dropdown">
+                            <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown"
+                                    aria-expanded="false">
+                                거주지
+                            </button>
+                            <ul class="dropdown-menu">
+                                <li><button class="dropdown-item" type="button">서울</button></li>
+                                <li><button class="dropdown-item" type="button">경기</button></li>
+                                <li><button class="dropdown-item" type="button">강원</button></li>
+                            </ul>
+                        </div>
+                    </div>
+
+
+                    <button>
+                        검색
+                    </button>
+                </div>
+
             </div>
-            <table class="table table-dark table-striped table-hover">
-                <thead>
-                <tr>
-                    <th scope="col"><input type="checkbox" id="selectAllCheckbox" /></th>
-                    <th class="col-no" scope="col">번호</th>
-                    <th class="col-name" scope="col">이름</th>
-                    <th class="col-id" scope="col">아이디</th>
-                    <th class="col-pwd" scope="col">비밀번호</th>
-                    <th class="col-birth" scope="col">생년월일</th>
-                    <th class="col-gender" scope="col">성별</th>
-                    <th class="col-nickname" scope="col">닉네임</th>
-                    <th class="col-regdate" scope="col">생성일자</th>
-                    <th class="col-location" scope="col">거주지</th>
-                    <th class="col-phone" scope="col">핸드폰번호</th>
-                    <th class="col-point" scope="col">포인트</th>
-                    <th scope="col"></th>
-                    <th scope="col"></th>
-                </tr>
-                </thead>
-                <tbody>
-                <tr th:each="user : ${userList}" >
-                    <td><input type="checkbox" th:value="${user.userno}" name="userCheckbox"/></td>
-                    <th scope="row" th:text="${user.userno}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></th>
-                    <td th:text="${user.u_name}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.id}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.pwd}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.date_birth}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.gender}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.nickname}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.date_reg}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.residence}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.phone}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                    <td th:text="${user.point}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
-                </tr>
-            </table>
+
+            <div class="table-userlist">
+
+                <div class=table-userlist-title>
+                    <div>회원관리</div>
+                    총 인원수: <span th:text="${totalUser} + '명'"></span>
+                    <div></div>
+                </div>
+                <table class="table table-dark table-striped table-hover">
+                    <thead>
+                    <tr>
+                        <th scope="col"><input type="checkbox" id="selectAllCheckbox" /></th>
+                        <th class="col-no" scope="col">번호</th>
+                        <th class="col-name" scope="col">이름</th>
+                        <th class="col-id" scope="col">아이디</th>
+                        <th class="col-pwd" scope="col">비밀번호</th>
+                        <th class="col-birth" scope="col">생년월일</th>
+                        <th class="col-gender" scope="col">성별</th>
+                        <th class="col-nickname" scope="col">닉네임</th>
+                        <th class="col-regdate" scope="col">생성일자</th>
+                        <th class="col-location" scope="col">거주지</th>
+                        <th class="col-phone" scope="col">핸드폰번호</th>
+                        <th class="col-point" scope="col">포인트</th>
+                        <th scope="col"></th>
+                        <th scope="col"></th>
+                    </tr>
+                    </thead>
+                    <tbody>
+                    <tr th:each="user : ${userList}" >
+                        <td><input type="checkbox" th:value="${user.userno}" name="userCheckbox" th:data-user-id="${user.userno}"/></td>
+                        <th scope="row" th:text="${user.userno}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}" ></th>
+                        <td th:text="${user.u_name}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.id}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.pwd}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.date_birth}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.gender}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.nickname}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.date_reg}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.residence}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.phone}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                        <td th:text="${user.point}" data-bs-toggle="modal" th:attr="data-bs-target='#model-' + ${user.userno}"></td>
+                    </tr>
+                </table>
+            </div>
         </div>
-    </div>
+
+        <!-- Paging Nav Bar -->
+        <nav aria-label="Page navigation example">
+            <ul class="pagination">
+                <li class="page-item">
+                    <a class="page-link" href="/adminUserList/1" aria-label="Previous">
+                        <span aria-hidden="true">&laquo;</span>
+                    </a>
+                </li>
+                <li class="page-item" th:each="page : ${#numbers.sequence(1, totalPage)}">
+                    <a class="page-link" th:href="@{/adminUserList/{pageNum}(pageNum=${page})}" th:text="${page}"></a>
+                </li>
+                <li class="page-item">
+                    <a class="page-link" href="/adminUserList/${totalPage}" aria-label="Next">
+                        <span aria-hidden="true">&raquo;</span>
+                    </a>
+                </li>
+            </ul>
+        </nav>
+
+        <!-- 모달 창 열리고 거기서 추가할 수 있는 기능 -->
+        <button> 추 가 </button>
 
 
-    <nav aria-label="Page navigation example">
-        <ul class="pagination">
-            <li class="page-item">
-                <a class="page-link" href="/adminUserList/1" aria-label="Previous">
-                    <span aria-hidden="true">&laquo;</span>
-                </a>
-            </li>
-            <li class="page-item" th:each="page : ${#numbers.sequence(1, totalPage)}">
-                <a class="page-link" th:href="@{/adminUserList/{pageNum}(pageNum=${page})}" th:text="${page}"></a>
-            </li>
-            <li class="page-item">
-                <a class="page-link" href="/adminUserList/${totalPage}" aria-label="Next">
-                    <span aria-hidden="true">&raquo;</span>
-                </a>
-            </li>
-        </ul>
-    </nav>
-    <!-- Modal -->
-    <div th:each="user : ${userList}">
-        <div class="modal fade" th:id="'model-' + ${user.userno}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="'label-' + ${user.userno}" aria-hidden="true">
-            <div class="modal-dialog">
-                <div class="modal-content">
-                    <div class="modal-header">
-                        <h1 class="modal-title fs-5" th:id="'label-' + ${user.userno}" th:text="${user.u_name} + '님의 상세정보'">    </h1>
-                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                    </div>
-                    <div class="modal-body">
+        <!-- 체크박스에 표시되어 있는 계정을 삭제함 -->
+        <button class = "btn btn-primary-delete-user" disabled > 삭 제 </button>
+        <!-- Insert Modal -->
 
 
-                    </div>
-                    <div class="modal-footer">
-                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-                        <button type="button" class="btn btn-primary-update">수 정</button>
-                        <button type="button" class="btn btn-primary-delete" th:data-user-id="${user.userno}">삭 제</button>
+        <!-- Detail Modal -->
+        <div th:each="user : ${userList}">
+            <div class="modal fade" th:id="'model-' + ${user.userno}" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1" aria-labelledby="'label-' + ${user.userno}" aria-hidden="true">
+                <div class="modal-dialog">
+                    <div class="modal-content">
+                        <div class="modal-header">
+                            <h1 class="modal-title fs-5" th:id="'label-' + ${user.userno}" th:text="${user.u_name} + '님의 상세정보'">    </h1>
+                            <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+                        </div>
+                        <div class="modal-body">
+                            <!-- 이름 -->
+                            <div th:text="'이름: ' + ${user.u_name}"></div>
+                            <!-- 아이디 -->
+                            <div th:text="'아이디: ' + ${user.id}"></div>
+                            <!-- 비밀번호 -->
+                            <div th:text="'비밀번호: ' + ${user.pwd}"></div>
+                            <!-- 생년월일 -->
+                            <div th:text="'생년월일: ' + ${user.date_birth}"></div>
+                            <!-- 성별 -->
+                            <div th:text="'성별: ' + ${user.gender}"></div>
+                            <!-- 닉네임 -->
+                            <div th:text="'닉네임: ' + ${user.nickname}"></div>
+                            <!-- 생성일자 -->
+                            <div th:text="'생성일자: ' + ${user.date_reg}"></div>
+                            <!-- 거주지 -->
+                            <div th:text="'거주지: ' + ${user.residence}"></div>
+                            <!-- 핸드폰번호 -->
+                            <div th:text="'핸드폰번호: ' + ${user.phone}"></div>
+                            <!-- 포인트 -->
+                            <div th:text="'포인트: ' + ${user.point}"></div>
+                            <!-- 주문횟수 -->
+                            <!-- 주문내역 조회 -->
+
+                        </div>
+                        <div class="modal-footer">
+                            <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+                            <button type="button" class="btn btn-primary-delete" th:data-user-id="${user.userno}">삭 제</button>
+                        </div>
                     </div>
                 </div>
             </div>
         </div>
-    </div>
-</body>
+        </body>
 </html>
