--- a/src/main/resources/templates/mypage/shopping/detail.html
+++ b/src/main/resources/templates/mypage/shopping/detail.html
@@ -2,83 +2,178 @@
 <html xmlns:th="http://www.thymeleaf.org">
 
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Insert title here</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300&display=swap" rel="stylesheet">
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
-    integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
-  <link rel="stylesheet" href="/css/mypage/mypage.css">
-  <link rel="stylesheet" href="/css/main/bootstrap.min.css">
-  <link rel="stylesheet" href="/css/main/style.css">
-  <link rel="stylesheet" href="/css/main/responsive.css">
-  <link rel="stylesheet" href="/css/main/custom.css">
-  <link rel="stylesheet" href="/css/main/sidebar.css">
-  <link rel="stylesheet" href="/css/styles.css">
-  <script src="https://kit.fontawesome.com/149396cddc.js" crossorigin="anonymous"></script>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<title>Insert title here</title>
+	<link rel="preconnect" href="https://fonts.googleapis.com">
+	<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+	<link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@300&display=swap" rel="stylesheet">
+	<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet"
+		integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous" />
+	<link rel="stylesheet" href="/css/mypage/mypage.css">
+	<link rel="stylesheet" href="/css/main/bootstrap.min.css">
+	<link rel="stylesheet" href="/css/main/style.css">
+	<link rel="stylesheet" href="/css/main/responsive.css">
+	<link rel="stylesheet" href="/css/main/custom.css">
+	<link rel="stylesheet" href="/css/main/sidebar.css">
+	<link rel="stylesheet" href="/css/styles.css">
+	<meta name="_csrf_header" th:content="${_csrf.headerName}">
+	<meta name="_csrf" th:content="${_csrf.token}">
+
+	<script src="https://kit.fontawesome.com/149396cddc.js" crossorigin="anonymous"></script>
 </head>
 
 <body>
+	<input type="hidden" th:value="${order.ordersNo}" id="ordersNo">
 	<div th:include="./main/header.html"></div>
 	<div class="container con">
 		<div>
-          <span class="mb-6 sm-3 title">상세 주문내역&nbsp;&nbsp;</span>
-		  <span style="font-size: 20;" th:text="'주문번호 : '+${order.ordersNo}+' '"></span>
-      	  <span style="font-size: 20;" th:text="' • 주문일자 : '+${#dates.format(order.ordersDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
-          <button class="btn custom-reverse-btn t-btn">문의</button>
-          <button class="btn custom-reverse-btn t-btn">주문취소</button>
-          
-        </div>
+			<span class="mb-6 sm-3 title">상세 주문내역&nbsp;&nbsp;</span>
+			<span style="font-size: 20;" th:text="'주문번호 : '+${order.ordersNo}+' '"></span>
+			<span style="font-size: 20;"
+				th:text="' • 주문일자 : '+${#dates.format(order.ordersDate, 'yyyy-MM-dd HH:mm:ss')}"></span>
+			<button class="btn custom-reverse-btn t-btn">문의</button>
+			<button class="btn custom-reverse-btn t-btn" th:onclick="deleteOrders([[${orders.ordersNo}]])">주문취소</button>
 
-        <table class="table table-hover">
-          <tr>
-            <th><i class="fa-solid fa-images" style="color: #5c5c5c;"></i></th>
-            <th>상품명</th>
-            <th>결제금액</th>
-            <th><i class="fa-solid fa-bars" style="color: #5c5c5c;"></i></th>
-          </tr>
-          <tr th:each="d:${ordersdetail_list}">
-            <td><img class="img" th:src="@{/images/shop/}+${d.mainfname}"></td>
-            <td th:text="${d.goodsname}">대나무 칫솔 2EA</td>
-            <td><b style="text-decoration: line-through;">3,500원</b><br>2,700원</td>
-            <td><button class="btn custom-btn">후기쓰기</button></td>
-          </tr>
-      </table>
-      <table class="table">
-        <tr>
-          <th>결제방식</th>
-          <th>결제일자</th>
-          <th>주문금액</th>
-          <th></th>
-          <th>배송비</th>
-          <th></th>
-          <th>할인금액</th>
-          <th></th>
-          <th>최종 결제금액</th>
-        </tr>
-        <tr>
-          <td>신용카드</td>
-          <td>2023/07/22 14:27</td>
-          <td>16,400원</td>
-          <td style="font-weight: bold; color: #3a6d40;">+</td>
-          <td>3,500원</td>
-          <td style="font-weight: bold; color: #3a6d40;">-</td>
-          <td>2,800원</td>
-          <td style="font-weight: bold; color: #3a6d40;">=</td>
-          <td style="font-size: 20px;">17,100원</td>
-        </tr>
-      </table>
-		
+		</div>
+
+		<table class="table table-hover">
+			<tr>
+				<th><i class="fa-solid fa-images" style="color: #5c5c5c;"></i></th>
+				<th>상품명</th>
+				<th>결제금액</th>
+				<th><i class="fa-solid fa-bars" style="color: #5c5c5c;"></i></th>
+			</tr>
+			<tr th:each="d:${ordersdetail_list}">
+				<td><img class="img" th:src="@{/images/shop/}+${d.mainfname}"
+						th:onclick="'location.href=\'' + @{/shop/detail(goodsNo=${d.goodsno})} + '\''"></td>
+				<td th:text="${d.goodsname}"
+					th:onclick="'location.href=\'' + @{/shop/detail(goodsNo=${d.goodsno})} + '\''"></td>
+				<td th:onclick="'location.href=\'' + @{/shop/detail(goodsNo=${d.goodsno})} + '\''">
+					<span style="text-decoration: line-through;" th:text="${d.goodsprice}+' 원'"></span>
+					<br>
+					<b th:text="${d.detailprice}+' 원'"></b>
+				</td>
+				<td><button class="btn custom-btn" th:onclick="writeReview([[${d.goodsno}]])">후기쓰기</button></td>
+
+			</tr>
+		</table>
+		<table class="table">
+			<tr>
+				<th>결제방식</th>
+				<th>결제일자</th>
+				<th>주문금액</th>
+				<th></th>
+				<th>배송비</th>
+				<th></th>
+				<th>최종 결제금액</th>
+			</tr>
+			<tr>
+				<td th:text="${payment.payment_method}"></td>
+				<td th:text="${#dates.format(payment.payDate, 'yyyy-MM-dd HH:mm:ss')}"></td>
+				<td th:text="${order.ordersPrice}+' 원'"></td>
+				<td style="font-weight: bold; color: #3a6d40;">+</td>
+				<td th:text="${order.shipPrice}+' 원'"></td>
+				<td style="font-weight: bold; color: #3a6d40;">=</td>
+				<td style="font-size: 20px;" th:text="${order.shipPrice}+${order.ordersPrice}+' 원'"></td>
+			</tr>
+		</table>
+
 	</div>
-	
-	
+	<!-- Modal -->
+	<div class="modal fade" id="reviewModal" tabindex="-1" aria-labelledby="reviewModalLabel" aria-hidden="true">
+		<div class="modal-dialog modal-dialog-centered">
+			<div class="modal-content">
+				<div class="modal-header">
+					<h1 class="modal-title fs-5" id="reviewModalLabel">리뷰 작성</h1>
+					<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+				</div>
+				<div class="modal-body">
+					<form>
+						제목 : <input type="text" class="input" id="inputTitle"><br>
+						내용 : <br>
+						<textarea rows="20" cols="10" style="border-radius: 30px;" id="inputContent"></textarea>
+					</form>
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">닫기</button>
+					<button type="button" class="btn custom-btn" onclick="submitReview()">리뷰 작성하기</button>
+				</div>
+			</div>
+		</div>
+	</div>
+
 	<div th:include="./main/footer.html"></div>
 	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-    <script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+		integrity="sha384-kenU1KFdBIe4zVF0s0G1M5b4hcpxyD9F7jL+jjXkk+Q2h455rYXK/7HAuoJl+0I4"
+		crossorigin="anonymous"></script>
+	<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
+	<script src="https://code.jquery.com/jquery-3.7.0.min.js"></script>
+	<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+
+	<script>
+		var goodsno;
+		var inputTitle;
+		var inputContent;
+		function writeReview(goodsNo) {
+			$("#reviewModal").modal('show');
+			goodsno = goodsNo;
+		}
+		function submitReview() {
+			var header = $("meta[name='_csrf_header']").attr('content');
+			var token = $("meta[name='_csrf']").attr('content');
+			inputTitle = $('#inputTitle').val();
+			inputContent = $('#inputContent').val();
+			console.log("g", goodsno);
+			console.log("t", inputTitle);
+			console.log("c", inputContent);
+			$.ajax({
+				url: "/mypage/writeReview",
+				data: {goodsno: goodsno, opinionName: inputTitle, opinionContent: inputContent},
+				beforeSend: function (xhr) {
+					xhr.setRequestHeader(header, token);
+				},
+				method: "POST",
+				success: function (result) {
+					if (result == 1) {
+						$('#inputTitle').val('');
+						$('#inputContent').val('');
+						location.reload();
+					}
+				}
+			})
+		}
+		function deleteOrders(ordersNo) {
+			Swal.fire({
+				title: '주문을 취소하시겠습니까?',
+				text: '3~5 영업일 이내에 환불됩니다.',
+				icon: 'info',
+
+				showCancelButton: true, // cancel버튼 보이기. 기본은 원래 없음
+				confirmButtonColor: '#6f96d1', // confrim 버튼 색깔 지정
+				cancelButtonColor: '#58b483', // cancel 버튼 색깔 지정
+				confirmButtonText: '확인', // confirm 버튼 텍스트 지정
+				cancelButtonText: '취소', // cancel 버튼 텍스트 지정
+
+				reverseButtons: true, // 버튼 순서 거꾸로
+
+			}).then(result => {
+				// 만약 Promise리턴을 받으면,
+				if (result.isConfirmed) { // 만약 모달창에서 confirm 버튼을 눌렀다면
+					let f = document.createElement('form');
+					f.setAttribute('method', 'post');
+					f.setAttribute('action', '/mypage/shopping/delete');
+					var hiddenField = document.createElement("input");
+					hiddenField.setAttribute("type", "hidden");
+					hiddenField.setAttribute("name", "ordersno");
+					hiddenField.setAttribute("value", $('#ordersNo').val());
+					f.appendChild(hiddenField);
+					document.body.appendChild(f);
+					f.submit();
+				}
+			});
+		}
+	</script>
 </body>
 
 </html>
